name:                concise
version:             0.1.0.1
synopsis:            Utilities for Control.Lens.Cons
description:
  concise provides a handful of functions to extend what you can
  do with Control.Lens.Cons.

homepage:            https://github.com/frasertweedale/hs-concise
bug-reports:         https://github.com/frasertweedale/hs-concise/issues
license:             BSD3
license-file:        LICENSE
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           Copyright (C) 2016  Fraser Tweedale
category:            Data, Lenses
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10
tested-with:
  GHC == 8.0.2 || == 8.2.2 || == 8.4.4 || == 8.6.5 || == 8.8.4 || == 8.10.7
  || == 9.0.2 || == 9.2.8 || == 9.4.8 || == 9.6.7 || == 9.8.4 || == 9.10.2 || == 9.12.2
  || == 9.14.1


source-repository head
  type: git
  location: https://github.com/frasertweedale/hs-concise

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:  -Wall
  exposed-modules:
    Control.Lens.Cons.Extras
  build-depends:
    base >= 4 && < 5
    , lens
    , text
    , bytestring

test-suite tests
  default-language:    Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -O2 -threaded
  hs-source-dirs: test
  main-is: Prop.hs
  build-depends:
    base >= 4 && < 5
    , bytestring
    , lens
    , text
    , concise

    , tasty
    , tasty-quickcheck
    , QuickCheck
    , quickcheck-instances
